--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-table": "^8.16.0",
     "@upstash/redis": "^1.29.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.5.0",
     "normalize.css": "^8.0.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
